tests/errors/error_semantic_redeclaration.c
int x = 10;
float x = 20.0; // x is already declared
